# gitlab-ci-jobs-analyser

./: LICENSE  jobs-stats-dashboard.py  pyproject.toml
templates/: dashboard.html
